--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,94 +1,54 @@
 <div class="container">
   <div class="col-md-12">
-    <%= link_to("Clean the Cart", clean_carts_path, method: :delete, class: "pull-right", style: "text-decoration: underline;", data: {confirm: "Are you sure to clean the cart?"}) %>
-    <h2>Cart</h2>
-
-    <div class="item">
+    <h3>购物车</h3>
+    <p>您的购物车目前共有
+      <span class="badge" style="background-color: #77cde3;font-size:13px;vertical-align:center;">
+        <%= current_cart.products.count %>
+      </span>  个商品。
+    </p>
+    <hr>
+    <div class="col-sm-8 padding-bottom-2x">
+    <div class="shopping-cart">
       <% current_cart.cart_items.each do |cart_item| %>
-        <%= link_to product_path(cart_item.product) do %>
-          <% if cart_item.product.image.present? %>
-            <%= image_tag(cart_item.product.image.thumb.url, class: "thumbnail") %>
-          <% else %>
-            <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
-          <% end %>
+      <div class="item">
+        <% if cart_item.product.image.present? %>
+          <%= link_to image_tag(cart_item.product.image.medium.url), product_path(cart_item.product), class: "item-thumb"%>
+        <% else %>
+          <%= link_to image_tag("http://placehold.it/200x200&text=No Pic"), product_path(cart_item.product), class: "item-thumb"%>
         <% end %>
-      <div class="item-details">
-
-          <h3 class="item-title">
-            <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
-          </h3>
-          <h4 class="item-price">
-            <%= cart_item.product.price %>
-          </h4>
-          <div class="count-input">
-            <a class="incr-btn" data-action="decrease" href="#">–</a>
-            <input class="quantity" type="text" value="1">
-            <a class="incr-btn" data-action="increase" href="#">+</a>
-          </div>
+        <div class="item-details">
+            <p class="item-title">
+              <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
+            </p>
+            <p class="item-price">
+              ¥ <%= cart_item.product.price %>
+            </p>
+            <div class="count-input">
+              <a class="incr-btn" data-action="decrease" href="#">–</a>
+              <input class="quantity" type="text" value="1">
+              <a class="incr-btn" data-action="increase" href="#">+</a>
+            </div>
+        </div>
+        <a href="#" class="item-remove" data-toggle="tooltip" data-placement="top" title="Remove">
+          <i class="glyphicon glyphicon-trash remove_shopping_cart"></i>
+        </a>
       </div>
       <% end %>
     </div>
-
-    <a href="#" class="item-remove" data-toggle="tooltip" data-placement="top" title="Remove">
-      <i class="material-icons remove_shopping_cart"></i>
-    </a>
-
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th colspan="2">Product Details</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <th>Options</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% current_cart.cart_items.each do |cart_item| %>
-          <tr>
-            <td>
-              <%= link_to product_path(cart_item.product) do %>
-                <% if cart_item.product.image.present? %>
-                  <%= image_tag(cart_item.product.image.thumb.url, class: "thumbnail") %>
-                <% else %>
-                  <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
-                <% end %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
-            </td>
-            <td>
-              <%= cart_item.product.price %>
-            </td>
-            <td>
-              <% cart_item = current_cart.cart_items.find_by(product_id: cart_item.product_id) %>
-              <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
-                <%= f.select :quantity, 1..cart_item.product.quantity %>
-                <%= f.submit "update", data: { disable_with: "Submiting..." } %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
-                <i class="fa fa-trash"></i>
-              <% end %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <br>
-
-    <div class="total clearfix">
-      <span class="pull-right">
-        <span>Total <%= render_cart_total_price(current_cart) %> RMB</span>
-      </span>
-    </div>
   </div>
+  <!-- Sidebar -->
+  <div class="col-md-3 col-md-offset-1 col-sm-4 padding-bottom-2x">
+    <aside>
+      <h3 class="toolbar-title">购物车总价:</h3>
+      <h4 class="amount">¥ <%= render_cart_total_price(current_cart) %></h4>
+      <p class="text-sm text-gray">* 注意:该价格不包括任何税费和邮费，此部分费用会在下单后自动计算。</p>
 
-  <hr>
+      <%= link_to("更新购物车", checkout_carts_path, method: :post, class: "btn btn-default btn-block") %>
 
-  <div class="checkout clearfix">
-    <%= link_to("Checkout", checkout_carts_path, method: :post, class: "btn btn-lg btn-danger pull-right") %>
-  </div>
+      <%= link_to("清空购物车", clean_carts_path, method: :delete, class: "btn btn-info btn-block", data: {confirm: "Are you sure to clean the cart?"}) %>
+
+      <%= link_to("结帐", checkout_carts_path, method: :post, class: "btn btn-danger btn-block") %>
+    </aside>
+  </div><!-- .col-md-3.col-sm-4 -->
+
 </div>
