--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -49,6 +49,7 @@
 
       <%= link_to("结帐", checkout_carts_path, method: :post, class: "btn btn-danger btn-block") %>
     </aside>
-  </div><!-- .col-md-3.col-sm-4 -->
+  </div>
+  <!-- Sidebar -->
 
 </div>
