--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,67 +1,65 @@
-<div class="row">
+<div class="container">
+  <h2>结帐</h2>
+  <br>
   <div class="col-md-12">
-    <h2>Shopping List</h2>
 
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th width="80%">Product Details</th>
-          <th>Price</th>
-          <th>Quantity</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% current_cart.cart_items.each do |cart_item| %>
-          <tr>
-            <td>
-              <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
-            </td>
-            <td>
-              <%= cart_item.product.price %>
-            </td>
-            <td>
-              <%= cart_item.quantity %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <%= simple_form_for @order do |f| %>
+      <div class="col-md-8">
+        <legend>订购人信息</legend>
+          <div class="form-group col-lg-6">
+            <%= f.input :billing_name, :label => "订购人姓名" %>
+          </div>
+          <div class="form-group col-lg-6">
+            <%= f.input :billing_address, :label => "订购人地址" %>
+          </div>
+        <legend>收货人信息</legend>
+          <div class="form-group col-lg-6">
+            <%= f.input :shipping_name, :label => "收货人姓名" %>
+          </div>
+          <div class="form-group col-lg-6">
+            <%= f.input :shipping_address, :label => "收货人地址" %>
+          </div>
+          <legend>订单明细</legend>
+          <table class="table table-bordered table-striped table-hover table-condensed">
+            <thead>
+              <tr>
+                <th width="50%">商品名称</th>
+                <th>单价</th>
+                <th>数量</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% current_cart.cart_items.each do |cart_item| %>
+                <tr>
+                  <td>
+                    <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
+                  </td>
+                  <td>
+                    <%= cart_item.product.price %>
+                  </td>
+                  <td>
+                    <%= cart_item.quantity %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+      </div>
 
-    <div class="total clearfix">
-      <span class="pull-right">
-        Total <%= render_cart_total_price(current_cart) %> CNY
-      </span>
-    </div>
+      <!-- Sidebar -->
+      <div class="col-md-3 col-md-offset-1 col-sm-4">
+        <aside>
+          <h3 class="toolbar-title">购物车总价:</h3>
+          <h4 class="amount">¥ <%= render_cart_total_price(current_cart) %></h4>
+          <p class="text-sm text-gray">* 注意:该价格已经包括邮费。</p>
+          <%= link_to("返回购物车", carts_path, class: "btn btn-default btn-block") %>
+          <%= f.submit "创建订单", class: "btn btn-danger btn-block", data: {disable_with: "Submitting..."} %>
+        </aside>
+      </div>
+      <!-- Sidebar -->
+    <% end %>
 
     <hr>
-
-    <h2>Billing Details</h2>
-
-    <div class="order-form">
-
-      <%= simple_form_for @order do |f| %>
-
-        <legend>Billing Name</legend>
-        <div class="form-group col-lg-6">
-          <%= f.input :billing_name %>
-        </div>
-        <div class="form-group col-lg-6">
-          <%= f.input :billing_address %>
-        </div>
-
-        <legend>Shipping Name</legend>
-        <div class="form-group col-lg-6">
-          <%= f.input :shipping_name %>
-        </div>
-        <div class="form-group col-lg-6">
-          <%= f.input :shipping_address %>
-        </div>
-
-        <div class="checkout">
-          <%= f.submit "Create Billing", class: "btn btn-lg btn-danger pull-right", data: {disable_with: "Submitting..."} %>
-        </div>
-      <% end %>
-    </div>
 
   </div>
 </div>
