--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JDstore Admin Panel</title>
+    <title>TimeEx后台</title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </head>
   <body>
+    <%= render "common/navbar" %>
     <div class="container">
-      <%= render "common/navbar" %>
+      <%= render "common/flashes" %>
       <div class="row">
         <div class="col-md-2">
           <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
@@ -20,5 +21,6 @@
           <%= yield %>
         </div>
     </div>
+    <%= render "common/footer" %>
   </body>
 </html>
