--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,42 +1,33 @@
-<h2>Poduct List</h2>
-<div class="pull-right" style="padding-bottom: 20px;">
-  <%= link_to("Add new poduct", new_admin_product_path, class:"btn btn-primary btn-sm") %>
-</div>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th with="220">Poduct Pic</th>
-      <th>Name</th>
-      <th>Price</th>
-      <th width="100">Options</th>
-    </tr>
-  </thead>
-  <tbody>
+<h2>商品列表</h2>
+
+<div class="col-md-9">
+  <div class="shopping-cart">
+    <div class="pull-right" style="padding-bottom: 20px;">
+      <%= link_to("添加新商品", new_admin_product_path, class:"btn btn-danger btn-sm") %>
+    </div>
     <% @products.each do |product| %>
-    <tr>
-      <td>
-        <%= product.id %>
-      </td>
-      <td>
-        <%= link_to product_path(product) do %>
-          <% if product.image.present? %>
-            <%= image_tag(product.image.thumb.url, class:"thumbnail") %>
-          <% else %>
-            <%= image_tag("http://placehold.it/200x200&text=No Pic", class:"thumbnail") %>
-          <% end %>
+    <div class="item">
+
+      <%= link_to product_path(product) do %>
+        <% if product.image.present? %>
+          <%= link_to image_tag(product.image.thumb.url), product_path(product), class:"item-thumb" %>
+        <% else %>
+          <%= link_to image_tag("http://placehold.it/200x200&text=No"),product_path(product), class:"item-thumb"%>
         <% end %>
-      </td>
-      <td>
-        <%= product.title %>
-      </td>
-      <td>
-        <%= product.price %>
-      </td>
-      <td>
-        <%= link_to("Edit", edit_admin_product_path(product)) %>
-      </td>
-    </tr>
+      <% end %>
+
+      <div class="item-details">
+          <div class="item-title">
+            <p>序号：<%= product.id %></p>
+            <p>名称：<%= product.title %></p>
+            <p>价格：¥ <%= product.price %></p>
+            <p>库存：<%= product.quantity %></p>
+          </div>
+      </div>
+      <%= link_to edit_admin_product_path(product), class: "item-remove" do %>
+        <i class="glyphicon glyphicon-edit remove_shopping_cart"></i>
+        <% end %>
+    </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
