--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>New Product</h2>
+  <h2>添加新商品</h2>
   <%= simple_form_for [:admin, @product] do |f| %>
     <div class="group">
       <%= f.input :title %>
@@ -21,6 +21,7 @@
       <%= f.input :image, as: :file %>
     </div>
 
-    <%= f.submit "Submit", data: {disable_with: "Submitting..."} %>
+      <%= f.submit "提交", class:"btn btn-danger",  data: {disable_with: "Submitting..."} %>
+
   <% end %>
 </div>
