--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,21 +15,19 @@
       <div class="tab-content">
         <div id="all" class="tab-pane fade in active">
           <div class="content-md col-md-12" style="text-align:center;">
-              <div class="row">
-                <% @products.each do |product| %>
-                  <div class="col-xs-12 col-md-3">
-                  <%= link_to product_path(product) do %>
-                    <% if product.image.present? %>
-                      <%= image_tag(product.image.thumb.url, class:"thumbnail") %>
-                    <% else %>
-                      <%= image_tag("http://placehold.it/200x200&text=No Pic", class:"thumbnail") %>
-                    <% end %>
-                    <%= product.title %> ¥ <%= product.price %>
+            <div class="row">
+              <% @products.each do |product| %>
+                <div class="col-xs-12 col-md-3" style="margin-bottom: 30px;">
+                  <% if product.image.present? %>
+                    <%= link_to image_tag(product.image.thumb.url),product_path(product) , class:"thumbnail" %>
+                  <% else %>
+                    <%= link_to image_tag("http://placehold.it/200x200&text=No Pic"),product_path(product) , class:"thumbnail" %>
                   <% end %>
-                </div>
-                <% end %>
+                <%= product.title %> <span style="color:#ef0568;">  ¥<%= product.price %></span>
               </div>
+              <% end %>
             </div>
+          </div>
         </div>
         <!-- -->
         <div id="1hour" class="tab-pane fade">
