--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,21 +22,21 @@
     <div class="row">
       <div class="col-sm-4 sm-margin-b-50">
           <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-            <h3>Buy One Week</h3>
+            <h3>购买一星期</h3>
             <p>一个星期可以做什么？可以读一本好书。然而，好书太多，时间太少。为您精心制作的好书干货音频，让你在半小时内听完一本好书。</p>
             <a class="link" href="#">Read More</a>
           </div>
       </div>
       <div class="col-sm-4 sm-margin-b-50">
           <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-            <h3>Buy Three Months</h3>
+            <h3>购买三个月</h3>
             <p>3个月可以做什么？足够学习一门改变您人生的新技能。可是上班太忙，时间太少。为您精心挑选的优质课程，让您在3个月内获得双倍学习效果。</p>
             <a class="link" href="#">Read More</a>
           </div>
       </div>
       <div class="col-sm-4">
         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-            <h3>Buy Seven Years</h3>
+            <h3>购买七年</h3>
             <p>人的一生，其实可以活很多遍，7年就是一辈子。只要敢于迈出第一步。这里有您需要的学习圈、优质战友和下一个辈子的起点。</p>
             <a class="link" href="#">Read More</a>
         </div>
@@ -55,9 +55,9 @@
   <div class="section-seperator">
       <div class="content-md">
           <div class="row margin-b-40">
-              <div class="col-sm-6">
+              <div class="col-sm-4">
                   <h2>优质时间推荐</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                  <p>知识太多，时间太少。我们为您精选了新时代里最优质的知识，将别人的时间转化为您的生命。</p>
               </div>
           </div>
           <!--// end row -->
@@ -67,12 +67,14 @@
               <div class="col-sm-4 sm-margin-b-50">
                   <div class="bg-color-white margin-b-20">
                       <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-01.jpg" alt="Team Image">
+                        <%= link_to products_path do %>
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-18-xinshengdaxue.png" alt="Prouct Image">
+                        <% end %>
                       </div>
                   </div>
-                  <h4><a href="#">Alicia Keys</a> <span class="text-uppercase margin-l-20">Project Manager</span></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                  <a class="link" href="#">Read More</a>
+                  <h4><a href="#">新生大学</a> <span class="text-uppercase margin-l-20">知识型社群</span></h4>
+                  <p>这里集聚着一批以持续、自主、升级自我为乐的人。我们尊重知识，追求进步。我们相信通过学习获得重生。对我们来说，七年就是一辈子。</p>
+                  <%= link_to "Read More", products_path, class:"link" %>
               </div>
               <!-- End Team -->
 
@@ -80,12 +82,14 @@
               <div class="col-sm-4 sm-margin-b-50">
                   <div class="bg-color-white margin-b-20">
                       <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-02.jpg" alt="Team Image">
+                        <%= link_to products_path do %>
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-18-mj.png" alt="Prouct Image">
+                        <% end %>
                       </div>
                   </div>
-                  <h4><a href="#">James Millner</a> <span class="text-uppercase margin-l-20">Lead Developer</span></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                  <a class="link" href="#">Read More</a>
+                  <h4><a href="#">超级数字力</a> <span class="text-uppercase margin-l-20">只要懂中文就看得懂財報</span></h4>
+                  <p>林明樟老師將完全顛覆您過去對財務報表枯燥無趣的刻板印象，透過生活常識與遊戲化引導與活潑有趣的真實案例解析！」</p>
+                  <%= link_to "Read More", products_path, class:"link" %>
               </div>
               <!-- End Team -->
 
@@ -93,14 +97,18 @@
               <div class="col-sm-4 sm-margin-b-50">
                   <div class="bg-color-white margin-b-20">
                       <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-17-03.jpg" alt="Team Image">
+                        <%= link_to products_path do %>
+                          <img class="img-responsive" src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-18-quanzhanying.png" alt="Product Image">
+                        <% end %>
                       </div>
                   </div>
-                  <h4><a href="#">Scarlet Johanson</a> <span class="text-uppercase margin-l-20">Designer</span></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                  <a class="link" href="#">Read More</a>
+                  <h4><a href="#">全栈营</a> <span class="text-uppercase margin-l-20">一年蜕变全栈工程师</span></h4>
+                  <p>由两岸知名的 Rails 教练郑伊廷、天使投资人李笑来共同主持。我们以认知心理学为基石，旨在为未来培养出一批能够快速贯通编程理念并灵活实践的全栈工程师。</p>
+                  <%= link_to "Read More", products_path, class:"link" %>
               </div>
               <!-- End Team -->
+
+
           </div>
           <!--// end row -->
       </div>
