--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -23,11 +23,22 @@
             <p class="item-price">
               ¥ <%= cart_item.product.price %>
             </p>
-            <div class="count-input">
-              <a class="incr-btn" data-action="decrease" href="#">–</a>
-              <input class="quantity" type="text" value="1">
-              <a class="incr-btn" data-action="increase" href="#">+</a>
+            <div class="item-quantity fl tc">
+              <div class="count-input">
+                <%= link_to("-", remove_quantity_cart_item_path(cart_item.product_id), class: "incr-btn", method: :post) %>
+                <input class="quantity" type="text" value="<%= cart_item.quantity %>">
+                <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), class: "incr-btn", method: :post) %>
+              </div>
             </div>
+            <!-- <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
+             <%= f.select :quantity, [1,2,3,4,5] %>
+             <%= f.submit "更新", data: { disable_with: "Submiting..." } %>
+            <% end %> -->
+            <!-- <div class="count-input">
+              <a class="incr-btn" data-action="decrease" href="#">–</a>
+              <input class="quantity" type="text" value="2">
+              <a class="incr-btn" data-action="increase" href="#"></a>
+            </div> -->
         </div>
         <%= link_to cart_item_path(cart_item.product_id), class: "item-remove", method: :delete do %>
           <i class="glyphicon glyphicon-trash remove_shopping_cart"></i>
@@ -43,7 +54,7 @@
       <h4 class="amount">¥ <%= render_cart_total_price(current_cart) %></h4>
       <p class="text-sm text-gray">* 注意:该价格不包括任何税费和邮费，此部分费用会在下单后自动计算。</p>
 
-      <%= link_to("更新购物车", checkout_carts_path, method: :post, class: "btn btn-default btn-block") %>
+      <%= link_to("更新购物车", carts_path, class: "btn btn-default btn-block") %>
 
       <%= link_to("清空购物车", clean_carts_path, method: :delete, class: "btn btn-info btn-block", data: {confirm: "Are you sure to clean the cart?"}) %>
 
