add destroy_product in admin

--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -57,7 +57,7 @@
 
 .shopping-cart .item .item-remove {
   display: block;
-  position: absolute;
+  position: relative;
   width: 36px;
   height: 36px;
   top: 0;
