--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -24,9 +24,20 @@
             <p>库存：<%= product.quantity %></p>
           </div>
       </div>
-      <%= link_to edit_admin_product_path(product), class: "item-remove" do %>
-        <i class="glyphicon glyphicon-edit remove_shopping_cart"></i>
-        <% end %>
+
+      <div class="row" style="padding-bottom:10px;">
+        <%= link_to edit_admin_product_path(product), class: "item-remove" do %>
+          <i class="glyphicon glyphicon-edit remove_shopping_cart"></i>
+          <% end %>
+      </div>
+      
+      <div class="row">
+        <%= link_to admin_product_path(product), :method => :delete, class: "item-remove" do %>
+          <i class="glyphicon glyphicon-trash remove_shopping_cart"></i>
+          <% end %>
+      </div>
+
+
     </div>
     <% end %>
   </div>
