--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -24,9 +24,9 @@
               ¥ <%= cart_item.product.price %>
             </p>
             <div class="count-input">
-              <a class="incr-btn" data-action="decrease" href="#">–</a>
-              <input class="quantity" type="text" value="1">
-              <a class="incr-btn" data-action="increase" href="#">+</a>
+              <%= link_to("-", remove_quantity_cart_item_path(cart_item.product_id), class: "incr-btn", method: :post) %>
+              <input class="quantity" type="text" value="<%= cart_item.quantity %>">
+              <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), class: "incr-btn", method: :post) %>
             </div>
         </div>
         <div class="row">
