shop item title

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,7 +38,7 @@
                     </div>
                     <div class="shop-item-details">
                       <div class="shop-item-title">
-                        <p><%= product.title %></p>
+                        <%= product.title %>
                       </div>
                       <div class="shop-item-price">
                         <span style="color:#ef0568;">¥<%= product.price %></span>
