--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -69,8 +69,9 @@
 
 .shop-item .shop-item-details .shop-item-title {
   width: 80%;
-  font-size: 16px;
-  font-weight: normal;
+  font-size: 14px;
+  color: #a6a7aa;
+  font-weight: 400;
 }
 
 .shop-item .shop-item-details .shop-item-title > a {
