--- a/app/views/admin/orders/_state_option.html.erb
+++ b/app/views/admin/orders/_state_option.html.erb
@@ -13,6 +13,7 @@
 
     <% when "shipped" %>
       <%= link_to("退货", return_admin_order_path(order), class: "btn btn-default btn-sm", method: :post) %>
+      <!-- 此处增加后台商品数量变化 -->
 
     <% when "order_cancelled" %>
       <span class="label label-default">订单已取消</span>
