--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -11,6 +11,10 @@
     </div>
 
     <div class="group">
+      <%= f.input :category %>
+    </div>
+
+    <div class="group">
       <%= f.input :quantity %>
     </div>
 
@@ -23,7 +27,7 @@
       <br>
       <%= image_tag(@product.image.thumb.url) %>
     <% end %>
-    
+
     <div class="group">
       <%= f.input :image, as: :file %>
     </div>
