--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -10,6 +10,10 @@
     </div>
 
     <div class="group">
+      <%= f.input :category %>
+    </div>
+
+    <div class="group">
       <%= f.input :quantity %>
     </div>
 
