product page layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,4 +18,9 @@
 
     <%= render "common/footer" %>
   </body>
+
+  
+  <script type="text/javascript">
+    $(".owl-carousel").owlCarousel();
+  </script>
 </html>
