--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -68,10 +68,9 @@
 }
 
 .shop-item .shop-item-details .shop-item-title {
-  width: 80%;
-  font-size: 14px;
-  color: #a6a7aa;
-  font-weight: 400;
+  width: 70%;
+  font-size: 16px;
+  font-weight: normal;
 }
 
 .shop-item .shop-item-details .shop-item-title > a {
@@ -80,7 +79,7 @@
 }
 
 .shop-item .shop-item-details .shop-item-price {
-  width: 20%;
+  width: 30%;
   font-size: 16px;
   text-align: right;
 }
