--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -53,7 +53,7 @@
                     TimeEx
                   <% end %>
                   Design by:
-                  <a href="https://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="https://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
+                  <a href="http://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="http://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
             </div>
         </div>
         <!--// end row -->
