--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -17,3 +17,15 @@
   width: 30%;
   height:auto;
 }
+
+.team {
+  display: talbe;
+}
+
+.team1 {
+  display: table-cell;
+}
+
+.team2 {
+  display: table-cell;
+}
