--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -10,7 +10,7 @@
                     <ul class="list-unstyled footer-list">
                         <li class="footer-list-item"><%= link_to("HOME", root_path) %></li>
                         <li class="footer-list-item"><%= link_to("TIME SHOP", products_path) %></li>
-                        <li class="footer-list-item"><%= link_to("FQA", products_path) %></li>
+                        <li class="footer-list-item"><%= link_to("FAQ", products_path) %></li>
                         <li class="footer-list-item"><%= link_to("CONTACT", products_path) %></li>
                     </ul>
                     <!-- End List -->
