--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -38,13 +38,13 @@
 
             <!-- FQA -->
             <li class="nav-item">
-                <%= link_to("常见问题", root_path, class:"nav-item-child") %>
+                <%= link_to("常见问题", faq_index_path, class:"nav-item-child") %>
             </li>
             <!-- End FQA -->
 
             <!-- Contact -->
             <li class="nav-item">
-              <%= link_to("联系我们", root_path, class:"nav-item-child") %>
+              <%= link_to("关于我们", about_index_path, class:"nav-item-child") %>
             </li>
             <!-- End Contact -->
 
