--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,6 +30,24 @@
           <p>暂无评测</p>
         </div>
         <div id="comment" class="tab-pane fade">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>文章内容</th>
+                <th>发表者</th>
+                <th>发表时间</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @posts.each do |post| %>
+                <tr>
+                  <td><%= post.content %></td>
+                  <td><%= post.user.email %></td>
+                  <td><%= post.created_at %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
           <%= link_to("Write a Post", new_product_post_path(@product), class: "btn btn-default pull-right")%>
         </div>
       </div>
