--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,8 +9,8 @@
         <!-- nav-tabs -->
       <ul class="nav nav-tabs nav-justified">
           <li class="active"><a data-toggle="tab" href="#product">产品</a></li>
-          <li><a data-toggle="tab" href="#post">评测</a></li>
-          <li><a data-toggle="tab" href="#comment">讨论</a></li>
+          <li><a data-toggle="tab" href="#review">评测</a></li>
+          <li><a data-toggle="tab" href="#post">讨论</a></li>
         </ul>
       </div>
       <!-- .nav-tabs-->
@@ -26,10 +26,10 @@
             <% end %>
           </div>
         </div>
-        <div id="post" class="tab-pane fade">
+        <div id="review" class="tab-pane fade">
           <p>暂无评测</p>
         </div>
-        <div id="comment" class="tab-pane fade">
+        <div id="post" class="tab-pane fade">
           <table class="table">
             <thead>
               <tr>
@@ -49,7 +49,11 @@
             </tbody>
           </table>
           <%= link_to("Write a Post", new_product_post_path(@product), class: "btn btn-default pull-right")%>
+          <div class="text-center">
+            <%= will_paginate @posts %>
+          </div>
         </div>
+
       </div>
 
     </main>
